--- a/stopview.html
+++ b/stopview.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">    <link rel="stylesheet" type="text/css" href="googlecharts.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="stopview.css"/>
       <!--Load the AJAX API-->
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script>
@@ -719,12 +720,13 @@
                   <div class="charts-card">
                   <div class="chart-render" id="dashboard_welcome_div">
                     <p id="chart-text-id">
-                      <H1>Welcome to operational metrics dashboard!</H1>
-                      <H4>This dashboard summarizes metrics at city level, or individual stop level of Hyderabad city buses of TSRTC.</H4>
-                      <p>This dashboard consists of the below pages:</p>
+                      <!-- <H1>Welcome to operational metrics dashboard!</H1> -->
+                      <!-- <H4>This dashboard summarizes metrics at city level, or individual stop level of Hyderabad city buses of TSRTC.</H4> -->
+                      <p>Navigation information for this dashboard:</p>
                           <ol>
                             <li><H4>BUS STOP: <span>In this page two levels of data filters available.</span></H4></li>
                                 <ul>
+                                  <li>This dashboard summarizes metrics at city level, or individual stop level of Hyderabad city buses of TSRTC.</li><br>
                                   <li>Stop selection = "ALL" or a value from drop-down. Initial view shows data from all stops.</li><br>
                                   <li>Date Range selection = Today, Past Week, Past Month, or Custom Date Range. Initial view shows data from previous day.</li>
                                 </ul><br>
