--- a/googlecharts.html
+++ b/googlecharts.html
@@ -369,8 +369,8 @@
 <div class="main-container" id="main-container-id">
       <div class="navbar">
           <a href="googlecharts.html" class="active-page"><i class="fa fa-home"></i>   HOME</a>
-          <a href="stopview.html"><i class="fas fa-map-pin"></i>   BUS STOP</a>
           <a href="routeview.html"><i class="fas fa-route"></i>   ROUTE</a>
+          <a href="stopview.html"><i class="fas fa-map-pin"></i>   BUS STOP</a>
           <a href="rawdata.html"><i class="fas fa-table"></i>   RAWDATA</a>
         </div>
       <div class="header-container" id="header-continer-id">
@@ -471,7 +471,7 @@
                     <p id="chart-text-id">
                       <H1>Welcome to operational metrics dashboard!</H1>
                       <!-- <H4>This dashboard summarizes metrics at city level, or individual depot level of Hyderabad city buses of TSRTC.</H4> -->
-                      <p>Navigation information for this dashboard:</p>
+                      <p>Dashboard information:</p>
                           <ol>
                             <li><H4>HOME: <span>In this page two levels of data filters available.</span></H4></li>
                                 <ul>
