added metro bus image in raw data

--- a/rawdata.html
+++ b/rawdata.html
@@ -1565,6 +1565,7 @@
                                   </ol>
                         
                                     </p>
+                                    <img src="Metro_bus.jpg" width="60%" height="30%"/>
 
 
                                 </div>
